fix: npm install not working in shared volume

--- a/sandbox/Dockerfile
+++ b/sandbox/Dockerfile
@@ -7,8 +7,5 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app/
 
-# Install dependencies using npm
-RUN npm install
-
 # Set the default command to run when the container starts
-CMD npm start
+CMD npm install && npm start
